job details layout done