@@ -3,19 +3,12 @@ package portal.forasbackend.service;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Sort;
-import org.springframework.data.jpa.domain.Specification;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import portal.forasbackend.dto.request.job.JobRequest;
-import portal.forasbackend.dto.request.job.JobSearchRequest;
 import portal.forasbackend.dto.response.job.*;
-import portal.forasbackend.entity.City;
-import portal.forasbackend.entity.Employer;
-import portal.forasbackend.entity.Industry;
-import portal.forasbackend.entity.Job;
+import portal.forasbackend.entity.*;
 import portal.forasbackend.mapper.JobMapper;
 import portal.forasbackend.repository.CityRepository;
 import portal.forasbackend.repository.EmployerRepository;
@@ -23,7 +16,7 @@ import portal.forasbackend.repository.IndustryRepository;
 import portal.forasbackend.repository.JobRepository;
 import portal.forasbackend.repository.specification.JobSpecification;
 
-import org.springframework.data.domain.Pageable;
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -36,6 +29,7 @@ public class JobService {
     private final CityRepository cityRepository;
     private final IndustryRepository industryRepository;
     private final EmployerRepository employerRepository;
+    private final JobTranslationService jobTranslationService;
     private final CloudinaryService cloudinaryService;
     private final JobMapper jobMapper;
 
@@ -56,53 +50,67 @@ public class JobService {
         String imageUrl = cloudinaryService.uploadJobImage(jobImage);
 
         Job job = Job.builder()
-                .jobTitle(request.getJobTitle())
-                .jobDescription(request.getJobDescription())
                 .salary(request.getSalary())
-                .requiredQualifications(request.getRequiredQualifications())
                 .jobType(request.getJobType())
                 .imageUrl(imageUrl)
                 .transportationAvailable(request.isTransportation())
                 .hebrewRequired(request.isHebrew())
-                // .latitude(request.getLatitude())
-                // .longitude(request.getLongitude())
                 .city(city)
                 .industry(industry)
                 .employer(employer)
                 .build();
 
-        return jobRepository.save(job);
+        Job savedJob = jobRepository.save(job);
+
+        jobTranslationService.createOriginal(
+                savedJob,
+                request.getLanguage(),
+                request.getJobTitle(),
+                request.getJobDescription(),
+                request.getRequiredQualifications()
+        ); // ✅ delegated logic
+
+        return savedJob;
     }
+
 
     public Page<MainPageJobListResponse> getAllJobs(Pageable pageable) {
-        Page<Job> jobsPage = jobRepository.findAll(pageable);
-        return jobsPage.map(jobMapper::toDto);
+        return jobRepository.findAll(pageable)
+                .map(jobMapper::toDto);
     }
-
-
-
 
     public List<EmployerDashboardJobListResponse> findByEmployerId(Long employerId) {
         return jobRepository.findByEmployerId(employerId).stream()
-                .map(job -> EmployerDashboardJobListResponse.builder()
-                        .id(job.getId())
-                        .jobTitle(job.getJobTitle())
-                        .jobDescription(job.getJobDescription())
-                        .salary(job.getSalary())
-                        .cityName(job.getCity())
-                        .status(job.getStatus())
-                        .build()
-                )
+                .map(job -> {
+                    JobTranslation original = job.getTranslations().stream()
+                            .filter(JobTranslation::isOriginal)
+                            .findFirst().orElse(null);
+                    return EmployerDashboardJobListResponse.builder()
+                            .id(job.getId())
+                            .jobTitle(original != null ? original.getTitle() : "")
+                            .jobDescription(original != null ? original.getDescription() : "")
+                            .salary(job.getSalary())
+                            .cityName(job.getCity())
+                            .status(job.getStatus())
+                            .build();
+                })
                 .collect(Collectors.toList());
     }
 
-    // JobService.java
-    public EmployerJobDetailsResponse getJobDetailsById(Long jobId) {
+    public EmployerJobDetailsResponse getEmployerJobDetailsById(Long jobId) {
         Job job = jobRepository.findByIdWithCandidates(jobId)
                 .orElseThrow(() -> new EntityNotFoundException("Job not found"));
 
         return EmployerJobDetailsResponse.from(job);
     }
+
+    public AdminJobDetailsResponse getAdminJobDetailsById(Long jobId) {
+        Job job = jobRepository.findByIdWithDetails(jobId)
+                .orElseThrow(() -> new EntityNotFoundException("Job not found"));
+
+        return AdminJobDetailsResponse.from(job);
+    }
+
 
 
     public Page<MainPageJobListResponse> searchJobs(
@@ -112,34 +120,30 @@ public class JobService {
             Boolean transportationAvailable,
             Pageable pageable) {
 
-        Page<Job> jobPage = jobRepository.findAll(
-                JobSpecification.withFilters(
-                        cityCode,
-                        industryCode,
-                        hebrewRequired,
-                        transportationAvailable
-                ),
+        return jobRepository.findAll(
+                JobSpecification.withFilters(cityCode, industryCode, hebrewRequired, transportationAvailable),
                 pageable
-        );
-
-        return jobPage.map(jobMapper::toDto);
+        ).map(jobMapper::toDto);
     }
-
 
     public List<AdminDashboardJobListResponse> getAllJobsForAdmin() {
-        List<Job> jobs = jobRepository.findAll();
+        return jobRepository.findAll().stream()
+                .map(job -> {
+                    JobTranslation originalTranslation = job.getTranslations().stream()
+                            .filter(JobTranslation::isOriginal)
+                            .findFirst()
+                            .orElse(null);
 
-        return jobs.stream()
-                .map(job -> AdminDashboardJobListResponse.builder()
-                        .id(job.getId())
-                        .jobTitle(job.getJobTitle())
-                        .jobDescription(job.getJobDescription())
-                        .salary(job.getSalary())
-                        .cityName(job.getCity())
-                        .status(job.getStatus())
-                        .build())
-                .toList();
+                    return AdminDashboardJobListResponse.builder()
+                            .id(job.getId())
+                            .jobTitle(originalTranslation != null ? originalTranslation.getTitle() : "—")
+                            .jobDescription(originalTranslation != null ? originalTranslation.getDescription() : "—")
+                            .salary(job.getSalary())
+                            .cityName(job.getCity())
+                            .status(job.getStatus())
+                            .build();
+                })
+                .collect(Collectors.toList());
     }
-
 
 }
